Important changes from 1.7.1 => 1.7.2
============================================================
Fixed survey activation when survey not active in source
LimeSurvey equation questions now use help text for question or question code when empty
The menu remains fully visible when an error occurs

Important changes from 1.7.0 => 1.7.1
============================================================
ABOUT THE UPGRADE
    Check the upgrade compatibility report for any possible code issues!!
    Ignore any messages that a "Column does not exist in table" during the upgrade
INTERFACE EXTENSIONS
    User with the right privileges can select those respondents either with or without a track in the respondent screen
    Respondents, tracks and tokens can now be undeleted - with the admin level user right
    Manual or automatic token recalculation is now determined through an input element instead of through 'magic'
    Manual or automatic track end date recalculation is now determined through an input element instead of through 'magic'
    Support of the use of respondent relations is now included but not yet part of the default interface
SECURITY
    GemsTracker is now auditable, manageable through Setup => Log Setup
    Activity reports are at several locations:
        Respondent => Show => Other Activity Log
        Setup => Access => Staff => Show => Activity overview
        Setup => Log
        Your account => Activity overview
    Csrf protection can now be disabled at the project level (not recommended)
EXPORT
    CSV format export supported
    Trackinformation can be added to the export
    Multiple surveys can be selected for a single export
IMPORT
    Improved error reporting during answer import
TRACK BUILDER
    "Single Survey" tracks are replaced by survey level "insert into track" settings
    Stand alone Single survey tracks are converted to AnyStepEngine tracks, any other Single Survey tracks are deleted
TRACK FIELDS