@@ -1,0 +1,102 @@
+<?php
+
+/**
+ * Copyright (c) 2015, Erasmus MC
+ * All rights reserved.
+ *
+ * Redistribution and use in source and binary forms, with or without
+ * modification, are permitted provided that the following conditions are met:
+ *    * Redistributions of source code must retain the above copyright
+ *      notice, this list of conditions and the following disclaimer.
+ *    * Redistributions in binary form must reproduce the above copyright
+ *      notice, this list of conditions and the following disclaimer in the
+ *      documentation and/or other materials provided with the distribution.
+ *    * Neither the name of Erasmus MC nor the
+ *      names of its contributors may be used to endorse or promote products
+ *      derived from this software without specific prior written permission.
+ *
+ * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
+ * ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
+ * WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
+ * DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR ANY
+ * DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
+ * (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
+ * LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
+ * ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
+ * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
+ * SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+ *
+ *
+ * @package    Gems
+ * @subpackage Model_Translator
+ * @author     Menno Dekker <menno.dekker@erasmusmc.nl>
+ * @copyright  Copyright (c) 2015 Erasmus MC
+ * @license    New BSD License
+ * @version    $Id$
+ */
+
+/**
+ *
+ *
+ * @package    Gems
+ * @subpackage Model_Translator
+ * @copyright  Copyright (c) 2015 Erasmus MC
+ * @license    New BSD License
+ * @since      Class available since version 1.7.2
+ */
+class Gems_Model_Translator_StaffTranslator extends \Gems_Model_Translator_StraightTranslator
+{
+    /**
+     * The name of the field to store the organization id in
+     *
+     * @var string
+     */
+    protected $orgIdField = 'gsf_id_organization';
+    
+    /**
+     *
+     * @var Gems_Loader
+     */
+    protected $loader;
+    
+    /**
+     *
+     * @var Gems_User_Organization
+     */
+    protected $_organization;
+        
+    public function afterRegistry() {
+        parent::afterRegistry();
+    
+        // The users current organization
+        $this->_organization = $this->loader->getCurrentUser()->getCurrentOrganization();
+    }
+
+    /**
+     * Add organization id and gul_user_class when needed
+     *
+     * @param mixed $row array or Traversable row
+     * @param scalar $key
+     * @return mixed Row array or false when errors occurred
+     */
+    public function translateRowValues($row, $key)
+    {
+        $row = parent::translateRowValues($row, $key);
+
+        if (! $row) {
+            return false;
+        }
+
+        if (!isset($row['gsf_id_organization'])) {
+            $row['gsf_id_organization'] = $this->_organization->getId();
+            
+            if (!isset($row['gul_user_class'])) {
+                $row['gul_user_class'] = $this->_organization->get('gor_user_class');
+            }
+        } elseif (!isset($row['gul_user_class'])) {
+            $row['gul_user_class'] = $this->loader->getUserLoader()->getOrganization($row['gsf_id_organization'])->get('gor_user_class');
+        }
+
+        return $row;
+    }
+}
